CMAKE_MINIMUM_REQUIRED(VERSION 3.0)


PROJECT(tests)


SET(CPPTRANSPORT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)

SET(
  CPPTRANSPORT_INCLUDE_DIRS
  ${CPPTRANSPORT_INCLUDE_DIR}
  ${JSONCPP_INCLUDE_DIRS}
  ${SPLINTER_INCLUDE_DIRS}
  ${SPLINTER_INCLUDE_DIRS}/SPLINTER
  ${ODEINT_INCLUDE_DIRS}
  ${CMAKE_BINARY_DIR}
)

SET(CPPTRANSPORT_LIBRARIES ${JSONCPP_LIBRARIES} ${SPLINTER_LIBRARIES})


ADD_SUBDIRECTORY(PyTransport "PyTransport")
