CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(dquad)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "~/.cpptransport-packages/share/cmake/")

SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -DNDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "-Ofast -DNDEBUG")

FIND_PACKAGE(CppTransport REQUIRED)

INCLUDE_DIRECTORIES(${CPPTRANSPORT_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})

ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/dquad_core.h ${CMAKE_CURRENT_BINARY_DIR}/dquad_mpi.h
  COMMAND CppTransport --verbose --fast ${CMAKE_CURRENT_SOURCE_DIR}/dquad.model
  DEPENDS dquad.model
)

SET(HEADERS ${CMAKE_CURRENT_BINARY_DIR}/dquad_core.h ${CMAKE_CURRENT_BINARY_DIR}/dquad_mpi.h)

ADD_CUSTOM_TARGET(Generator DEPENDS ${HEADERS})

ADD_EXECUTABLE(dquad dquad.cpp)
ADD_DEPENDENCIES(dquad Generator)
TARGET_LINK_LIBRARIES(dquad ${CPPTRANSPORT_LIBRARIES})
TARGET_COMPILE_OPTIONS(dquad PRIVATE -std=c++14 -mavx)
