CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(dquad)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "~/.cpptransport201701/share/cmake/")

INCLUDE(CompilerFlags)

SET_COMPILER_FLAGS()

FIND_PACKAGE(CppTransport REQUIRED)

INCLUDE_DIRECTORIES(${CPPTRANSPORT_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})

ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/dquad_core.h ${CMAKE_CURRENT_BINARY_DIR}/dquad_mpi.h
  COMMAND CppTransport --verbose --fast ${CMAKE_CURRENT_SOURCE_DIR}/dquad.model
  DEPENDS dquad.model
)

SET(HEADERS ${CMAKE_CURRENT_BINARY_DIR}/dquad_core.h ${CMAKE_CURRENT_BINARY_DIR}/dquad_mpi.h)

ADD_CUSTOM_TARGET(Generator DEPENDS ${HEADERS})

ADD_EXECUTABLE(dquad_A dquad_A.cpp)
ADD_DEPENDENCIES(dquad_A Generator)
TARGET_LINK_LIBRARIES(dquad_A ${CPPTRANSPORT_LIBRARIES})
SET_TARGET_PROPERTIES(dquad_A PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  )

ADD_EXECUTABLE(dquad_B dquad_B.cpp)
ADD_DEPENDENCIES(dquad_B Generator)
TARGET_LINK_LIBRARIES(dquad_B ${CPPTRANSPORT_LIBRARIES})
SET_TARGET_PROPERTIES(dquad_B PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  )

ADD_EXECUTABLE(dquad_C dquad_C.cpp)
ADD_DEPENDENCIES(dquad_C Generator)
TARGET_LINK_LIBRARIES(dquad_C ${CPPTRANSPORT_LIBRARIES})
SET_TARGET_PROPERTIES(dquad_C PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  )

ADD_EXECUTABLE(dquad_D dquad_D.cpp)
ADD_DEPENDENCIES(dquad_D Generator)
TARGET_LINK_LIBRARIES(dquad_D ${CPPTRANSPORT_LIBRARIES})
SET_TARGET_PROPERTIES(dquad_D PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  )

ADD_EXECUTABLE(dquad_E dquad_E.cpp)
ADD_DEPENDENCIES(dquad_E Generator)
TARGET_LINK_LIBRARIES(dquad_E ${CPPTRANSPORT_LIBRARIES})
SET_TARGET_PROPERTIES(dquad_E PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  )
